<resources>
    <string name="app_name">CoTEC-2020-App</string>
    <string name="go_to_database">Go to Database</string>
    <string name="id">ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nation">Nation</string>
    <string name="region">Region</string>
    <string name="icu">ICU</string>
    <string name="age">Age</string>
    <string name="hospitalized">Hospitalized</string>
    <string name="insert">Insert</string>
    <string name="select_all">Select All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="welcome_to_the_hospital_app">Welcome to the Hospital App!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts">Contacts</string>
    <string name="state">State</string>
    <string name="pathologies">Pathologies</string>
    <string name="medication">Medication</string>
    <string name="id">ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nationality">Nationality</string>
    <string name="region">Region</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="pathology">Pathology</string>
    <string name="patient">Patient</string>
    <string name="hospital">Hospital</string>
    <string name="insert">Insert</string>
    <string name="select_all">Select All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="go_back">Go Back!</string>
    <string name="go_back">Go Back!</string>
</resources>